--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vision.svg" />
+    <link rel="icon" type="image/svg+xml" href="/netviz.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vision</title>
+    <title>NetViz</title>
 </head>
 
 <body>
